--- a/styles.css
+++ b/styles.css
@@ -122,12 +122,11 @@ audio{
 }
 .header__logo{
   width: 25%;
-  heigh: 25%;
+  height: 25%;
 }
 @media (max-width: 768px) {
   .img__question{
-    width: 100%;
-    height:150px;
+    height: 150px;
   }
   *,
 *::before,
