--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,7 @@ audio{
   margin-bottom: 20px;
 }
 .header__logo{
-  width: 25%;
-  height: 25%;
+  height: 150px;
 }
 @media (max-width: 768px) {
   .img__question{
